# klever-vm-sdk-rs

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.sc-meta  README.md  meta-build-wasm.sh  meta-run-all.sh  publish.sh  remove-outputs.sh  rust-toolchain.toml  sizes.sh  vm-test-build-copy.sh
contracts/benchmarks/str-repeat/: Cargo.toml  sc-config.toml
contracts/benchmarks/str-repeat/meta/: Cargo.toml
contracts/benchmarks/str-repeat/scenarios/: mb_builder_basic.scen.json  mb_builder_cached.scen.json  str_repeat.scen.json
contracts/benchmarks/str-repeat/src/: str_repeat.rs
contracts/benchmarks/str-repeat/tests/: scenario_go_test.rs  scenario_rs_test.rs
contracts/benchmarks/str-repeat/wasm/: Cargo.toml
contracts/benchmarks/str-repeat/wasm-str-repeat-mb-builder-basic/: Cargo.toml
contracts/benchmarks/str-repeat/wasm-str-repeat-mb-builder-cached/: Cargo.toml
contracts/examples/adder/: Cargo.toml  kleversc-template.toml
contracts/examples/adder/meta/: Cargo.toml
contracts/examples/adder/scenarios/: adder.scen.json  (+1 more)
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/crowdfunding-kda/: .gitignore  Cargo.toml  sc-config.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-zombies/: .gitignore  Cargo.toml  kleversc-template.toml
contracts/examples/deposit-kda-pool/: Cargo.toml  README.md  kleversc-template.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/kda-transfer-with-fee/: Cargo.toml  README.md
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/proxy-recursive/: Cargo.toml
contracts/examples/rewards-distribution/: .gitignore  Cargo.toml
contracts/examples/save-data/: Cargo.toml
contracts/examples/seed-nft-minter/: Cargo.toml
contracts/examples/web3-dns/: Cargo.toml  multicontract.toml  sc-config.toml
contracts/feature-tests/abi-tester/: .gitignore  Cargo.toml  abi_tester_expected_kda_attr.kda-abi.json  abi_tester_expected_main.abi.json  abi_tester_expected_view.abi.json
contracts/feature-tests/alloc-features/: Cargo.toml  sc-config.toml
contracts/modules/: Cargo.toml  README.md
contracts/modules/src/: dns.rs  features.rs  kda.rs  lib.rs  ongoing_operation.rs  only_admin.rs  pause.rs  staking.rs  transfer_role_proxy.rs  users.rs
data/codec/: Cargo.toml  README.md
data/codec-derive/: Cargo.toml  README.md
data/codec-derive/src/: nested_de_derive.rs  util.rs
data/codec/src/: lib.rs  num_conv.rs
data/codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_struct_opt_field.rs  explicit_impl_wrapped_array.rs
framework/base/: Cargo.toml  README.md
framework/base/src/: err_msg.rs  external_view_contract.rs  imports.rs  lib.rs  macros.rs
framework/base/tests/: formatter_test.rs
framework/derive/: Cargo.toml  README.md
framework/derive/src/: contract_impl.rs  lib.rs  macro_contract.rs  macro_proxy.rs  managed_vec_item_derive.rs  type_abi_derive.rs
framework/meta/: Cargo.toml  README.md
framework/meta/src/: abi_json.rs  cargo_toml_contents.rs  ei_check_json.rs  kda_attr_file_json.rs  kleversc_file_json.rs  lib.rs  main.rs  print_util.rs  report_info_json.rs  tools.rs  version.rs  version_history.rs
framework/meta/tests/: ei_test.rs  multi_contract_test.rs  stg_process_code_test.rs  template_test.rs
framework/scenario/: Cargo.toml  README.md
framework/scenario/src/: bech32.rs  display_util.rs  imports.rs  lib.rs  main.rs  managed_test_util.rs  scenario_macros.rs  vm_go_tool.rs  whitebox_legacy.rs
framework/scenario/tests/: big_int_test.rs  contract_call_test.rs  contract_without_macros.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_kda_token_payment_test.rs  derive_managed_vec_item_simple_enum.rs  derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs  derive_managed_vec_item_struct_3.rs  hex_call_data_arg_load.rs  kda_token_payment_test.rs  managed_codec_test.rs  managed_option_test.rs  managed_ref_test.rs  managed_type_debug_test.rs  managed_vec_test.rs  multi_value_encoded_test.rs  path_test.rs  scenarios_io_test.rs  scenarios_self_test.rs  single_tx_api_test.rs  static_buffer_ref_test.rs  test_crypto.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_print_api.rs  test_queue_mapper.rs  test_vec_mapper.rs  token_identifier_test.rs
framework/wasm-adapter/: Cargo.toml  README.md
framework/wasm-adapter/src/: lib.rs  panic.rs  wasm_alloc.rs  wasm_macros.rs
sdk/core/: Cargo.toml  README.md
sdk/core/src/: blockchain.rs  utils.rs  wallet.rs
sdk/core/tests/: wallet_test.rs
sdk/scenario-format/: Cargo.toml  README.md
sdk/scenario-format/tests/: interpreter_test.rs  reconstructor_tests.rs
vm/: Cargo.toml  README.md
vm/src/: lib.rs  mem_conv.rs  tx_execution.rs  tx_mock.rs  types.rs  vm_err_msg.rs  world_mock.rs
vm/src/tx_execution/: blockchain_vm.rs  builtin_function_mocks.rs  exec_call.rs  exec_contract_endpoint.rs  exec_create.rs  exec_general_tx.rs  system_sc.rs
vm/src/tx_mock/: tx_async_call_data.rs  tx_async_promise.rs  tx_back_transfers.rs  tx_cache.rs  tx_cache_balance_util.rs  tx_context.rs  tx_input.rs  tx_input_call_type.rs  tx_panic.rs  tx_result.rs  tx_result_calls.rs
vm/src/types/: vm_address.rs  vm_code_metadata.rs
vm/src/vm_hooks/: vh_dispatcher.rs  vh_source.rs
vm/src/world_mock/: account_data.rs  account_permission.rs  blockchain_mock.rs  blockchain_state.rs  failing_executor.rs  kda_data.rs  kda_instance.rs  kda_instance_metadata.rs  kda_instances.rs  kda_roles.rs  reserved.rs
(+1676 files in other folders)
