
[workspace]
resolver = "2"

members = [
  "data/codec",
  "data/codec-derive",

  "framework/base",
  "framework/derive",
  "framework/meta",
  "framework/scenario",
  "framework/wasm-adapter",

  "sdk/core",
  "sdk/scenario-format",

  "vm",

  "contracts/modules",

  "contracts/benchmarks/mappers/benchmark-common",
  "contracts/benchmarks/mappers/linked-list-repeat",
  "contracts/benchmarks/mappers/linked-list-repeat/meta",
  "contracts/benchmarks/mappers/map-repeat",
  "contracts/benchmarks/mappers/map-repeat/meta",
  "contracts/benchmarks/mappers/queue-repeat",
  "contracts/benchmarks/mappers/queue-repeat/meta",
  "contracts/benchmarks/mappers/set-repeat",
  "contracts/benchmarks/mappers/set-repeat/meta",
  "contracts/benchmarks/mappers/single-value-repeat",
  "contracts/benchmarks/mappers/single-value-repeat/meta",
  "contracts/benchmarks/mappers/vec-repeat",
  "contracts/benchmarks/mappers/vec-repeat/meta",
  "contracts/benchmarks/large-storage",
  "contracts/benchmarks/large-storage/meta",
  "contracts/benchmarks/str-repeat",
  "contracts/benchmarks/str-repeat/meta",
  "contracts/benchmarks/send-tx-repeat",
  "contracts/benchmarks/send-tx-repeat/meta",

  "contracts/examples/adder",
  "contracts/examples/adder/meta",
  "contracts/examples/kda-transfer-with-fee",
  "contracts/examples/kda-transfer-with-fee/meta",
  "contracts/examples/kapps",
  "contracts/examples/kapps/meta",
  "contracts/examples/bonding-curve-contract",
  "contracts/examples/bonding-curve-contract/meta",
  "contracts/examples/crowdfunding-kda",
  "contracts/examples/crowdfunding-kda/meta",
  "contracts/examples/crypto-bubbles",
  "contracts/examples/crypto-bubbles/meta",
  "contracts/examples/crypto-zombies",
  "contracts/examples/crypto-zombies/meta",
  "contracts/examples/check-pause",
  "contracts/examples/check-pause/meta",
  "contracts/examples/digital-cash",
  "contracts/examples/digital-cash/meta",
  "contracts/examples/empty",
  "contracts/examples/empty/meta",
  "contracts/examples/factorial",
  "contracts/examples/factorial/meta",
  "contracts/examples/hello-world",
  "contracts/examples/hello-world/meta",
  "contracts/examples/lottery-kda",
  "contracts/examples/lottery-kda/meta",
  "contracts/examples/nft-minter",
  "contracts/examples/nft-minter/meta",
  "contracts/examples/nft-storage-prepay",
  "contracts/examples/nft-storage-prepay/meta",
  "contracts/examples/order-book/factory",
  "contracts/examples/order-book/factory/meta",
  "contracts/examples/order-book/pair",
  "contracts/examples/order-book/pair/meta",
  "contracts/examples/proxy-pause",
  "contracts/examples/proxy-pause/meta",
  "contracts/examples/proxy-recursive",
  "contracts/examples/proxy-recursive/meta",
  "contracts/examples/rewards-distribution",
  "contracts/examples/rewards-distribution/meta",
  "contracts/examples/seed-nft-minter",
  "contracts/examples/seed-nft-minter/meta",
  "contracts/examples/token-release",
  "contracts/examples/token-release/meta",
  "contracts/examples/web3-dns",
  "contracts/examples/web3-dns/meta",
  "contracts/examples/crowdfunding",
  "contracts/examples/crowdfunding/meta",
  "contracts/examples/dice",
  "contracts/examples/dice/meta",
  "contracts/examples/save-data",
  "contracts/examples/save-data/meta",
  "contracts/examples/deposit-kda-pool",
  "contracts/examples/deposit-kda-pool/meta",  
  "contracts/feature-tests/abi-tester",
  "contracts/feature-tests/abi-tester/meta",
  "contracts/feature-tests/alloc-features",
  "contracts/feature-tests/alloc-features/meta",
  "contracts/feature-tests/basic-features",
  "contracts/feature-tests/basic-features/meta",
  "contracts/feature-tests/big-float-features",
  "contracts/feature-tests/big-float-features/meta",
  "contracts/feature-tests/composability",
  "contracts/feature-tests/composability/builtin-func-features",
  "contracts/feature-tests/composability/builtin-func-features/meta",
  "contracts/feature-tests/composability/kda-contract-pair",
  "contracts/feature-tests/composability/kda-contract-pair/first-contract",
  "contracts/feature-tests/composability/kda-contract-pair/first-contract/meta",
  "contracts/feature-tests/composability/kda-contract-pair/second-contract",
  "contracts/feature-tests/composability/kda-contract-pair/second-contract/meta",
  "contracts/feature-tests/composability/execute-on-dest-kda-issue-callback/parent",
  "contracts/feature-tests/composability/execute-on-dest-kda-issue-callback/parent/meta",
  "contracts/feature-tests/composability/execute-on-dest-kda-issue-callback/child",
  "contracts/feature-tests/composability/execute-on-dest-kda-issue-callback/child/meta",
  "contracts/feature-tests/composability/local-kda-and-nft",
  "contracts/feature-tests/composability/local-kda-and-nft/meta",
  "contracts/feature-tests/composability/proxy-test-first",
  "contracts/feature-tests/composability/proxy-test-first/meta",
  "contracts/feature-tests/composability/proxy-test-second",
  "contracts/feature-tests/composability/proxy-test-second/meta",
  "contracts/feature-tests/erc-style-contracts/crowdfunding-erc20",
  "contracts/feature-tests/erc-style-contracts/crowdfunding-erc20/meta",
  "contracts/feature-tests/erc-style-contracts/erc20",
  "contracts/feature-tests/erc-style-contracts/erc20/meta",
  "contracts/feature-tests/erc-style-contracts/erc721",
  "contracts/feature-tests/erc-style-contracts/erc721/meta",
  "contracts/feature-tests/erc-style-contracts/erc1155",
  "contracts/feature-tests/erc-style-contracts/erc1155/meta",
  "contracts/feature-tests/erc-style-contracts/erc1155-marketplace",
  "contracts/feature-tests/erc-style-contracts/erc1155-marketplace/meta",
  "contracts/feature-tests/erc-style-contracts/erc1155-user-mock",
  "contracts/feature-tests/erc-style-contracts/erc1155-user-mock/meta",
  "contracts/feature-tests/erc-style-contracts/lottery-erc20",
  "contracts/feature-tests/erc-style-contracts/lottery-erc20/meta",
  "contracts/feature-tests/kda-system-sc-mock",
  "contracts/feature-tests/kda-system-sc-mock/meta",
  "contracts/feature-tests/exchange-features",
  "contracts/feature-tests/exchange-features/meta",
  "contracts/feature-tests/formatted-message-features",
  "contracts/feature-tests/formatted-message-features/meta",
  "contracts/feature-tests/managed-map-features",
  "contracts/feature-tests/managed-map-features/meta",
  "contracts/feature-tests/multi-contract-features",
  "contracts/feature-tests/multi-contract-features/meta",
  "contracts/feature-tests/panic-message-features",
  "contracts/feature-tests/panic-message-features/meta",
  "contracts/feature-tests/payable-features",
  "contracts/feature-tests/payable-features/meta",
  "contracts/feature-tests/rust-snippets-generator-test",
  "contracts/feature-tests/rust-snippets-generator-test/meta",
  "contracts/feature-tests/rust-testing-framework-tester",
  "contracts/feature-tests/rust-testing-framework-tester/meta",
  "contracts/feature-tests/use-module",
  "contracts/feature-tests/use-module/meta",
  "contracts/feature-tests/exchange-features",
  "contracts/feature-tests/exchange-features/meta",
  "contracts/feature-tests/scenario-tester",
  "contracts/feature-tests/scenario-tester/meta"
]
