[package]
name = "klever-chain-vm"
version = "0.5.2"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "Klever <contact@klever.io>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever VM implementation and tooling"
keywords = ["klever", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
rand = "0.8.5"
rand_seeder = "0.2.2"
ed25519-dalek = "1.0.1"
itertools = "0.12.0"
hex-literal = "=0.4.1"
bitflags = "=2.5.0"
colored = "2.1.0"

[dependencies.klever-chain-vm-executor]
git = "https://github.com/klever-io/klever-vm-executor-rs"
version = "0.2.2"
rev = "ecd185b"
