[package]
name = "klever-sc-modules"
version = "0.43.3"
edition = "2021"

authors = ["Klever <contact@klever.io>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever WebAssembly standard smart contract modules"
keywords = ["klever", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
alloc = ["klever-sc/alloc"]

[dependencies.klever-sc]
version = "0.43.3"
path = "../../framework/base"
