[package]
name = "klever-sc-codec-derive"
version = "0.18.1"
edition = "2021"

authors = ["dorin.iancu <dorin.iancu@multiversx.com>", "Andrei Marinica <andrei.marinica@multiversx.com>", "Klever <contact@klever.io>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Macro implementations of klever-sc-codec #[derive(NestedEncode, NestedDecode, TopEncode, TopDecode)]"
keywords = ["klever", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[lib]
name = "klever_sc_codec_derive"
proc-macro = true

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "1.0"
hex = "0.4"
