[package]
name = "klever-sc-codec"
version = "0.18.1"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@multiversx.com>", "Klever <contact@klever.io>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.org/"
description = "Lightweight binary serializer/deserializer, written especially for Klever smart contracts"
keywords = ["klever", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["klever-sc-codec-derive"]
alloc = []

[dependencies.klever-sc-codec-derive]
path = "../codec-derive"
version = "=0.18.1"
optional = true

[dependencies]
arrayvec = { version = "=0.7.6", default-features = false }
num-bigint = { version = "0.4", optional = true } # can only be used in std contexts
unwrap-infallible = "0.1.5"

[dev-dependencies.klever-sc-codec-derive]
path = "../codec-derive"
version = "=0.18.1"
