[package]
name = "klever-sc"
version = "0.43.3"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@multiversx.com>", "Klever <contact@klever.io>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever smart contract API"
keywords = ["klever", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
num-bigint = ["klever-sc-codec/num-bigint"]
alloc = ["klever-sc-codec/alloc"]

[dependencies]
hex-literal = "0.4.1"
bitflags = "2.4.1"
num-traits = { version = "0.2", default-features = false }

[dependencies.klever-sc-derive]
version = "=0.43.3"
path = "../derive"

[dependencies.klever-sc-codec]
version = "=0.18.1"
path = "../../data/codec"
features = ["derive"]
