[package]
name = "klever-sc-derive"
version = "0.43.3"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@multiversx.com>", "Klever <contact@klever.io>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever smart contract API procedural macros"
keywords = ["klever", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "=1.0.83"
quote = "=1.0.36"
syn = "=2.0.87"
hex = "=0.4.3"
radix_trie = "=0.2.1"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "klever_sc_derive"
proc-macro = true
