[package]
name = "klever-sc-meta"
version = "0.43.3"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "Klever <contact@klever.io>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever smart contract meta-programming tools and build system"
keywords = ["klever", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[[bin]]
name = "sc-meta"
path = "src/main.rs"

[features]
template-test-current = []
template-test-released = []

[dependencies]
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.11.4", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3.0"
copy_dir = "0.1.2"
zip = { version = "0.6.4", default-features = false }
serde_json = "1.0"
anyhow = "1.0.44"
rustc_version = "0.4"
toml = { version = "0.5.8", features = ["preserve_order"] }
ruplacer = "0.8.1"
clap = { version = "4.1.0", features = ["derive", "cargo"] }
colored = "2.0"
pathdiff = "0.2.1"
common-path = "1.0.0"
lazy_static = "1.4.0"
convert_case = "0.6.0"
hex = "0.4"

[dependencies.klever-sc]
version = "=0.43.3"
path = "../base"
features = ["alloc", "num-bigint", "promises"]

# [target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
# version = "0.5"
