[package]
name = "klever-sc-wasm-adapter"
version = "0.43.3"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "Klever <contact@klever.io>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever WebAssembly VM API wrapper"
keywords = ["klever", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[dependencies.klever-sc]
version = "=0.43.3"
path = "../base"
