[package]
name = "klever-chain-scenario-format"
version = "0.20.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@multiversx.com>", "Klever <contact@klever.io>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-sdk-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.org/"
description = "Parser/writer of the Klever transaction scenario format"
keywords = ["klever", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.10.8"
bech32 = "0.9.0"
