[package]
name = "str-repeat"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/str_repeat.rs"

[features]
managed-buffer-builder-cached = ["klever-sc/managed-buffer-builder-cached"]

[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"
