[package]
name = "bonding-curve-contract"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/bonding_curve_contract.rs"

[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"

[dependencies.klever-sc-modules]
version = "0.44.0"
path = "../../../contracts/modules"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"

