[package]
name = "crowdfunding-kda"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/crowdfunding_kda.rs"

[dependencies.klever-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
