[package]
name = "crypto-bubbles"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/crypto_bubbles.rs"

[dependencies.klever-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"
