[package]
name = "deposit-kda-pool"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/deposit.rs"

[dependencies.klever-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"