[package]
name = "kda-transfer-with-fee"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/kda_transfer_with_fee.rs"

[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"
