[package]
name = "nft-storage-prepay"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@multiversx.com>",]
edition = "2021"
publish = false

[lib]
path = "src/nft_storage_prepay.rs"


[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"
