[package]
name = "proxy-pause"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/proxy_pause.rs"

[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"

[dev-dependencies.check-pause]
path = "../check-pause"

