[package]
name = "rewards-distribution"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/rewards_distribution.rs"

[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"

[dependencies.klever-sc-modules]
version = "0.44.0"
path = "../../../contracts/modules"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"
