[package]
name = "save-data"
version = "0.0.0"
authors = [ "Klever <klever@klever.io>",]
edition = "2021"
publish = false

[lib]
path = "src/save_object.rs"

[dependencies.klever-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"
