[package]
name = "web3-dns"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/dns.rs"

[dependencies.klever-sc]
version = "0.43.3"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"