[package]
name = "abi-tester"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/abi_tester.rs"

[dependencies.klever-sc]
version = "0.43.3"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"

[dev-dependencies.klever-sc-meta]
version = "0.43.3"
path = "../../../framework/meta"
