[package]
name = "alloc-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/alloc_features_main.rs"

[dependencies.klever-sc]
version = "0.44.0"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path = "../../../framework/scenario"

[dev-dependencies.kda-system-sc-mock]
path = "../kda-system-sc-mock"
